--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Leah Jorge</title>
   </head>
   <body>
-    <p>It's me, it's my website! (Stay Tuned!)</p>
+    <div class="header">
+      <header>
+        <p style="color: white">Welcome</p>
+      </header>
+    </div>
+
+    <div class="content">
+      <h1>Leah Jorge</h1>
+      <p>This website is uhhhh... not done :)</p>
+    </div>
   </body>
 </html>
