--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>Leah Jorge</title>
   </head>
   <body>
-    <div class="header">
-      <header>
-        <p style="color: white">Welcome</p>
-      </header>
-    </div>
-
-    <div class="content">
-      <h1>Leah Jorge</h1>
-      <p>This website is uhhhh... not done :)</p>
-    </div>
+    <nav class="nav">
+      <div class="nav-container">
+        <div class="name-container">
+          <h2>Leah Jorge</h2>
+        </div>
+        <ul class="ul">
+          <li>Sus</li>
+        </ul>
+      </div>
+    </nav>
+    <header>
+      <div class="me">
+        <h1>I'm Leah Jorge</h1>
+      </div>
+    </header>
   </body>
 </html>
